--- a/lib/poller_web/templates/page/index.html.eex
+++ b/lib/poller_web/templates/page/index.html.eex
@@ -7,22 +7,47 @@
         <div class="container">
             <div class="row">
                 <div class="mbr-section col-md-6 col-md-offset-1 text-xs-center">
-                    <h1 class="mbr-section-title display-1">Poller</h1>
-                    <p class="mbr-section-lead lead">A Simple polling Application, to express our needs</p>
+                    <h1 class="mbr-section-title display-3">Poller</h1>
+                    <p class="mbr-section-lead lead">A Simple polling Application.</p>
                 </div>
 
                 <div class="col-md-6">
-                  <div class="mbr-section-btn"><a class="btn btn-lg btn-primary" href="#">Login</a>
-                  <%= form_for @conn, auth_path(@conn, :new), [as: :login], fn f -> %>
-                    <div class="form-group">
-                      <%= text_input f, :login, class: 'form-control', placeholder: 'Username or Email' %>
-                      <br />
-                      <%= password_input f, :password, class: 'form-control', placeholder: 'Password' %>
+
+                    <div id='login-form'>
+                        <%= form_for @conn, auth_path(@conn, :new), [as: :login], fn f -> %>
+                            <div class="form-group">
+                            <%= text_input f, :login, class: 'form-control', placeholder: 'Username or Email' %>
+                            <br />
+                            <%= password_input f, :password, class: 'form-control', placeholder: 'Password' %>
+                            <br />
+                            <center><%= submit "Login", class: 'btn btn-lg btn-success' %></center>
+                            </div>
+                        <% end %>
+                        <center class='text-white'> (Or) </center>
+                        <hr />
+                        <center>
+                            <a class="btn btn-lg btn-white" href="#" id='show-reg-form'>Sign Up</a>
+                        </center>
                     </div>
-                  <% end %>
-                  <center> (Or) </center>
-                  <hr />
-                  <a class="btn btn-lg btn-white btn-white-outline" href="#">Sign Up</a></div>
+
+                    <div id='registration-form' class='hidden'>
+                        <%= form_for @changeset, auth_path(@conn, :new_registration), fn f -> %>
+                            <div class='form-group'>
+                                <%= text_input f, :username, class: 'form-control', placeholder: 'Username' %>
+                                <br />
+                                <%= text_input f, :email, class: 'form-control', placeholder: 'Email ID' %>
+                                <br />
+                                <%= password_input f, :password, class: 'form-control', placeholder: 'Password' %>
+                                <br />
+                                <center><%= submit "Register", class: 'btn btn-lg btn-success' %></center>
+                            </div>
+                        <% end %>
+                        <center class='text-white'> (Already Have an Account ?) </center>
+                        <hr />
+                        <center>
+                            <a class="btn btn-lg btn-white" href="#" id='show-login-form'>Login</a>
+                        </center>
+                    </div>
                 </div>
             </div>
         </div>
