--- a/lib/poller_web/templates/layout/app.html.eex
+++ b/lib/poller_web/templates/layout/app.html.eex
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-      <div class="container">
+      <div class="container-fluid">
         <div class="row">
           <%= if get_flash(@conn, :info) do %>
             <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
