[Caching] caching Current User

--- a/lib/poller_web/templates/layout/app.html.eex
+++ b/lib/poller_web/templates/layout/app.html.eex
@@ -16,6 +16,7 @@
       <div class="container-fluid">
         <%= if logged_in?(@conn) do %>
             <p class="text-muted text-center"><%= current_user(@conn).username %></p>
+            <%= link("Logout", to: "/logout") %>
         <% end %>
 
         <div class="row">
