--- a/lib/poller_web/templates/layout/app.html.eex
+++ b/lib/poller_web/templates/layout/app.html.eex
@@ -13,20 +13,48 @@
   </head>
 
   <body>
-      <div class="container-fluid">
-        <%= if logged_in?(@conn) do %>
-            <p class="text-muted text-center"><%= current_user(@conn).username %></p>
-            <%= link("Logout", to: "/logout") %>
-        <% end %>
+    <%= if logged_in?(@conn) do %>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark hidden" id="main-nav">
+          <a class="navbar-brand" href="/home">Poller</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-        <div class="row">
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item dropdown">&nbsp;</li>
+              <li class="nav-item">&nbsp;</li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+            <ul class="navbar-nav pull-right">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <%= current_user(@conn).username %>
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="#">Profile</a>
+                  <div class="dropdown-divider"></div>
+                  <%= link("Logout", to: "/logout", class: "dropdown-item") %>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </nav>
+    <% end %>
+
+      <div class="container-fluid">
+        <div class="row" id="main-content">
           <%= if get_flash(@conn, :info) do %>
             <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
           <% end %>
           <%= if get_flash(@conn, :error) do %>
             <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
           <% end %>
-        <%= render @view_module, @view_template, assigns %>
+
+          <%= render @view_module, @view_template, assigns %>
       </div>
     </div>
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
