--- a/lib/poller_web/templates/home/index.html.eex
+++ b/lib/poller_web/templates/home/index.html.eex
@@ -1,1 +1,10 @@
-<h1 class='text-center'> This page should be visible only to those who have logged in </h1>
+<!-- Large modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Large modal</button>
+
+<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+        From will come here. To add Question and Answers.
+    </div>
+  </div>
+</div>
