--- a/lib/poller_web/templates/layout/app.html.eex
+++ b/lib/poller_web/templates/layout/app.html.eex
@@ -14,7 +14,7 @@
 
   <body>
     <%= if logged_in?(@conn) do %>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark hidden" id="main-nav">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="main-nav">
           <a class="navbar-brand" href="/home">Poller</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -45,7 +45,7 @@
         </nav>
     <% end %>
 
-      <div class="container-fluid">
+      <div class="container">
         <div class="row" id="main-content">
           <%= if get_flash(@conn, :info) do %>
             <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
