[Polls] showin polls first cut

--- a/lib/poller_web/templates/layout/landing.html.eex
+++ b/lib/poller_web/templates/layout/landing.html.eex
@@ -10,6 +10,7 @@
     <title>Poller - A polling application</title>
 
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
+    <link rel="stylesheet" href="https://srinidhiprabandham.github.io/static-assets/poller-landing-page.css" >
   </head>
 
   <body>
