--- a/lib/poller_web/templates/home/index.html.eex
+++ b/lib/poller_web/templates/home/index.html.eex
@@ -1,10 +1,46 @@
-<!-- Large modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Large modal</button>
+<!-- Button trigger modal -->
+<div class='row'>
+    <div class='col6'>
+        <h5>All Polls Today</h5>
+     </div>
 
-<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
+    <div class='col6 pull-lg-right'>
+        <button type="button" class="btn btn-primary pull-xs-right" data-toggle="modal" data-target="#exampleModal">
+            New Poll
+        </button>
+     </div>
+</div>
+
+<div class="row">
+    <%= for poll <- @polls do %>
+        <div class="row">
+            <h6><%= poll.content %></h6>
+            <br />
+            <br />
+            <br />
+            <hr />
+        </div>
+        <br />
+    <% end %>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
     <div class="modal-content">
-        From will come here. To add Question and Answers.
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Submit A New Poll</h5>
+        <hr />
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
     </div>
   </div>
 </div>
