--- a/lib/poller_web/templates/layout/app.html.eex
+++ b/lib/poller_web/templates/layout/app.html.eex
@@ -22,14 +22,11 @@
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-              <li class="nav-item dropdown">&nbsp;</li>
+              <li class="nav-item dropdown"></li>
               <li class="nav-item">&nbsp;</li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
-            <ul class="navbar-nav pull-right">
+
+            <ul class="navbar-nav">
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <%= current_user(@conn).username %>
@@ -41,6 +38,22 @@
                 </div>
               </li>
             </ul>
+
+            <ul class="navbar-nav">
+                &nbsp;
+                &nbsp;
+                &nbsp;
+                &nbsp;
+                &nbsp;
+                &nbsp;
+                &nbsp;
+            </ul>
+
+<!--            <form class="form-inline pull-left"> -->
+<!--              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"> -->
+<!--              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
+<!--            </form> -->
+
           </div>
         </nav>
     <% end %>
