--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -14,7 +14,11 @@
 }
 
 #main-content {
-    margin-top: 2%;
+    margin-top: 80px;
+}
+
+.vote-bar {
+    cursor: pointer;
 }
 
 .card-columns {
@@ -37,4 +41,10 @@
 
 .nowrap {
   white-space: nowrap !important;
+}
+
+.progress-value {
+    position: absolute;
+    display: block;
+    width: 90%;
 }
