--- a/lib/poller_web/templates/home/index.html.eex
+++ b/lib/poller_web/templates/home/index.html.eex
@@ -17,44 +17,8 @@
     <div class="row">
         <div class="card-columns">
             <%= for poll <- @polls do %>
-                <div class="card" id="poll_question_id_<%= poll.id %>">
-                  <div class="card-header">
-                    <blockquote class="blockquote mb-0">
-                        <h5> <%= poll.content %></h5>
-                        <footer class="blockquote-footer">
-                            <%= poll.user.username %>
-                        </footer>
-                        <%= for tag <- poll.tags do %>
-                            <span class="badge badge-primary text-small"><%= tag %></span>
-                        <% end %>
-                    </blockquote>
-                  </div>
-                  <div class="card-body">
-                    <div class="row">
-                        <%= for answer <- poll.answers do %>
-                            <div class="col-sm-4">
-                                <%= if user_has_voted?(@conn, answer) do %>
-                                    <!-- Make content of answer green and disable the option to click on the vote again -->
-                                    <p class="card-text text-success"><%= answer.content %></p>
-                                    <span>
-                                        <div class="progress" style="height: 20px;">
-                                          <div class="progress-bar text-center" role="progressbar" style="width: <%= percentage_for(answer, poll.answers) %>;" aria-valuenow="<%= answer.votes %>" aria-valuemin="0" aria-valuemax="<%= total_value_for_progress_bar(poll.answers) %>" id="answer_id_<%= answer.id %>"><%= answer.votes %></div>
-                                        </div>
-                                    </span>
-                                <% else %>
-                                    <p class="card-text"><%= answer.content %></p>
-                                    <span class='vote-bar'>
-                                        <div class="progress" style="height: 20px;">
-                                          <div class="progress-bar text-center" role="progressbar" style="width: <%= percentage_for(answer, poll.answers) %>;" aria-valuenow="<%= answer.votes %>" aria-valuemin="0" aria-valuemax="<%= total_value_for_progress_bar(poll.answers) %>" id="answer_id_<%= answer.id %>">
-                                            <span class='progress-value'><%= answer.votes %></span>
-                                          </div>
-                                        </div>
-                                    </span>
-                                <% end %>
-                            </div>
-                        <% end %>
-                    </div>
-                  </div>
+                <div id="poll_question_id_<%= poll.id %>">
+                    <%= render PollerWeb.HomeView, "poll_card.html", poll: poll, current_user_id: current_user(@conn).id %>
                 </div>
             <% end %>
         </div>
