--- a/lib/poller_web/templates/auth/login.html.eex
+++ b/lib/poller_web/templates/auth/login.html.eex
@@ -1,18 +1,24 @@
 <div class="container">
-    <div id='login-form'>
-        <%= form_for @conn, auth_path(@conn, :new), [as: :login], fn f -> %>
-            <div class="form-group">
-                <%= text_input f, :login, class: 'form-control', placeholder: 'Username or Email' %>
-                <br />
-                <%= password_input f, :password, class: 'form-control', placeholder: 'Password' %>
-                <br />
-                <center><%= submit "Login", class: 'btn btn-lg btn-success' %></center>
+    <div class="card">
+        <div class="card-header">
+            <h5>Login</h5>
+         </div>
+        <div class="card-body">
+            <div id='login-form'>
+                <%= form_for @conn, auth_path(@conn, :new), [as: :login], fn f -> %>
+                    <div class="form-group">
+                        <%= text_input f, :login, class: 'form-control', placeholder: 'Username or Email' %>
+                        <br />
+                        <%= password_input f, :password, class: 'form-control', placeholder: 'Password' %>
+                        <br />
+                        <center><%= submit "Login", class: 'btn btn-lg btn-success' %></center>
+                    </div>
+                <% end %>
+                <center class='text-muted'> (Or) </center>
+                <center>
+                    <a class="btn btn-lg btn-white" href="/register" id='show-reg-form'>Sign Up</a>
+                </center>
             </div>
-        <% end %>
-        <center class='text-white'> (Or) </center>
-        <hr />
-        <center>
-            <a class="btn btn-lg btn-white" href="/register" id='show-reg-form'>Sign Up</a>
-        </center>
+        </div>
     </div>
 </div>
