--- a/lib/poller_web/templates/home/index.html.eex
+++ b/lib/poller_web/templates/home/index.html.eex
@@ -11,6 +11,26 @@
             </button>
          </div>
     </div>
+    <hr>
+    <div class='row'>
+        <div class="col-12">
+            <ul class="nav nav-pills nav-fill">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Today</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Week</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Month</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">All Time</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <hr>
 </div>
 
 <div class="container">
