--- a/lib/poller_web/templates/layout/app.html.eex
+++ b/lib/poller_web/templates/layout/app.html.eex
@@ -10,6 +10,7 @@
     <title>Poller - A polling application</title>
 
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.5.9/css/ripples.min.css">
   </head>
 
   <body>
@@ -71,6 +72,7 @@
           <%= render @view_module, @view_template, assigns %>
       </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.5.9/js/ripples.min.js" />
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
   </body>
 </html>
